--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,28 +13,10 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg bg-secondary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">CRUD</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
         </div>
       </nav>
 <!--Creando tabla-->
@@ -56,7 +38,7 @@
                 <td><%= user.user %></td>
                 <td><%= user.rol %></td>
                 <td>
-                    <a href="/edit" class="btn btn-outline-info">Editar</a>
+                    <a href="/edit/<%= user.id %>" class="btn btn-outline-info">Editar</a>
                     <a href="/delete" class="btn btn-outline-danger">Borrar</a>
                 </td>
             </tr>
