--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
                 <td><%= user.rol %></td>
                 <td>
                     <a href="/edit/<%= user.id %>" class="btn btn-outline-info">Editar</a>
-                    <a href="/delete" class="btn btn-outline-danger">Borrar</a>
+                    <a href="/delete/<%= user.id %>" class="btn btn-outline-danger">Borrar</a>
                 </td>
             </tr>
         <% }) %>
