--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -13,7 +13,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg bg-secondary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Añadiendo registro</a>
+          <a class="navbar-brand" href="#">Editando registro</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
